phase 8 and 9